# GenePT-tools

./: .gitignore  README.md  pyproject.toml
notebooks/: 1m_cells.md  1m_cells_analysis.ipynb  1m_cells_eda.ipynb  aging_and_related_gene_query.ipynb  blood_age_data_analysis.ipynb  brain_age_data_analysis.ipynb  brain_age_data_analysis_full_embeddings.ipynb  create_hf_repos.ipynb  generate_genept_embeddings.ipynb  lupus_data_analysis.ipynb  notebook_setup.ipynb  port.ipynb  tabula_sapiens.md  tabula_sapiens_analysis_all.ipynb  tabula_sapiens_eda.ipynb  tabula_sapiens_embed_genept.ipynb  tabula_sapiens_embed_genept_all.ipynb  tabula_sapiens_embed_scgpt.ipynb
src/: embeddings.py  inference.py  prompt_templates.py  recount3_utils.py  utils.py
test/: __init__.py  test_anndata_chunker.py  test_inference.py
