[project]
name = "genept-tools"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.9"
dependencies = [
    "dash",
    "datasets",
    "ipykernel",
    "lightgbm",
    "matplotlib",
    "numpy",
    "openai",
    "pandas",
    "plotly",
    "scanpy",
    "scikit-learn",
    "seaborn",
    "torch",
    "umap-learn",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pytest",
    "black[jupyter]",
    "isort",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3 
skip = [".gitignore", ".dockerignore"]